# guacamole-csv-importer

./: .flake8  LICENSE  Pipfile  README.md  connections-example.csv  pyproject.toml  setup.py
.github/workflows/: python-console-app.yml
guacamole_csv_importer/: __init__.py  api_client.py  connection_group_tree.py
src/guacamole_csv_importer/: __main__.py  api_client.py  cli.py  config.py  connection_csv_data.py  connection_group_tree.py  csv_parser.py  importer.py
tests/: conftest.py  test_api_client.py  test_connection_group_tree.py  test_csv_parser.py  test_importer.py
tests/fixture/: connections_1.csv
