[project]
name = "guacamole-csv-importer"
version = "0.1.1"
description = "A Python package for importing connections from CSV files into Apache Guacamole."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { "name" = "BoHong Li", email = "a60814billy@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
keywords = [
    "guacamole",
    "csv",
    "import",
    "remote desktop"
]

dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-responses>=0.5.1",
]

[project.urls]
Repository = "https://github.com/a60814billy/guacamole-csv-importer.git"
Issues = "https://github.com/a60814billy/guacamole-csv-importer/issues"

[project.scripts]
gu-import = "guacamole_csv_importer.cli:main"

[tool.uv]
package = true